# multisig

./: Cargo.toml  Makefile  README.md
.github/workflows/: push.yml  test.yml
contract/: Cargo.toml
contract/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/src/: context.rs  contract_name_interface.rs  happy_flow.rs  lib.rs
model/: Cargo.toml
model/src/: api.rs  data.rs  lib.rs
multisig-integration/: Cargo.toml
multisig-integration/src/: lib.rs
res/: multisig.wasm
scripts/: build-integration.sh  build.sh  lint.sh
