[workspace]

resolver = "2"

default-members = ["contract"]
members = ["model", "contract", "integration-tests", "multisig-integration"]

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
fake = "2.8.0"
rand = "0.8.5"
futures = "0.3.28"
itertools = "0.12.0"
base64 = "0.21.3"
sha256 = "1.3.0"
tokio = { version = "1.28" }

multisig-model = { path = "model" }
multisig-integration = { path = "multisig-integration" }

near-workspaces = "0.9.0"
near-sdk = { git = "https://github.com/sweatco/near-sdk-rs", rev = "8c48b26cc48d969c1e5f3162141fe9c824fccecd" }

integration-trait = { git = "https://github.com/sweatco/integration-utils.git", rev = "4595c0fa9e72c0adeab0496a5facfeb94483e374" }
integration-utils = { git = "https://github.com/sweatco/integration-utils.git", rev = "4595c0fa9e72c0adeab0496a5facfeb94483e374" }
