[workspace]

resolver = "2"

default-members = ["contract"]
members = ["model", "contract", "integration-tests"]

[workspace.dependencies]
anyhow = "1.0.75"
rand = "0.8.5"
base64 = "0.22"
sha256 = "1.3.0"
tokio = { version = "1.28" }
crypto-hash = "0.3"

multisig-model = { path = "model" }

near-workspaces = "0.10.1"
near-sdk = "5.1.0"

nitka = "0.5.0"
