[package]
name = "multisig"
version = "1.0.0"
authors = ["Sweat Economy"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
integration-test = []

[dependencies]
near-sdk = { workspace = true, features = ["legacy", "unit-testing"] }

multisig-model = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
sha256 = { workspace = true }
crypto-hash = { workspace = true }
base64 = { workspace = true }
