[package]
name = "integration-tests"
version = "1.0.0"
publish = false
edition = "2021"

[lib]
name = "integration_tests"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }

near-workspaces = { workspace = true }

multisig-model = { workspace = true, features = ["integration-api"] }
nitka = { workspace = true }
