[package]
name = "multisig-model"
version = "1.0.0"
publish = false
edition = "2021"

[lib]
name = "multisig_model"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }

near-sdk = { workspace = true }

integration-trait = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
integration-utils = { workspace = true }
