[package]
name = "multisig-model"
version = "1.0.0"
publish = false
edition = "2021"

[lib]
name = "multisig_model"

[features]
default = []
integration-api = ["dep:near-workspaces"]

[dependencies]
near-sdk = { workspace = true }
nitka = { workspace = true }
near-workspaces = { workspace = true, optional = true }

